// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactionList should match snapshot 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Connect(SlideUpPanel)
    header={[Function]}
    headerHeight={37.5}
    initialPosition={0.55}
    onRequestClose={[Function]}
  >
    <View
      style={
        Object {
          "height": 45,
          "justifyContent": "center",
        }
      }
    >
      <ReactionRow
        emojiName="+1"
        navigator={
          Object {
            "setOnNavigatorEvent": [MockFunction] {
              "calls": Array [
                Array [
                  [Function],
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
          }
        }
        teammateNameDisplay="username"
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        user={
          Object {
            "id": "user_id_2",
            "username": "username_2",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(61,60,64,0.2)",
            "height": 1,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "height": 45,
          "justifyContent": "center",
        }
      }
    >
      <ReactionRow
        emojiName="smile"
        navigator={
          Object {
            "setOnNavigatorEvent": [MockFunction] {
              "calls": Array [
                Array [
                  [Function],
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
          }
        }
        teammateNameDisplay="username"
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        user={
          Object {
            "id": "user_id_1",
            "username": "username_1",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(61,60,64,0.2)",
            "height": 1,
          }
        }
      />
    </View>
  </Connect(SlideUpPanel)>
</View>
`;

exports[`ReactionList should match snapshot, renderReactionRows 1`] = `
Array [
  <View
    style={
      Object {
        "height": 45,
        "justifyContent": "center",
      }
    }
  >
    <ReactionRow
      emojiName="+1"
      navigator={
        Object {
          "setOnNavigatorEvent": [MockFunction] {
            "calls": Array [
              Array [
                [Function],
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
        }
      }
      teammateNameDisplay="username"
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      user={
        Object {
          "id": "user_id_2",
          "username": "username_2",
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "rgba(61,60,64,0.2)",
          "height": 1,
        }
      }
    />
  </View>,
  <View
    style={
      Object {
        "height": 45,
        "justifyContent": "center",
      }
    }
  >
    <ReactionRow
      emojiName="smile"
      navigator={
        Object {
          "setOnNavigatorEvent": [MockFunction] {
            "calls": Array [
              Array [
                [Function],
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
        }
      }
      teammateNameDisplay="username"
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      user={
        Object {
          "id": "user_id_1",
          "username": "username_1",
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "rgba(61,60,64,0.2)",
          "height": 1,
        }
      }
    />
  </View>,
]
`;
